# djot-implementations

./: .gitignore  Cargo.toml  Makefile  README.md  benchmarks.sh  cpu-name.sh  file-size.sh  install-djots-debian.sh  install-djots.sh  install-linux.sh  install-lua-debian.sh  install-pandoc-debian.sh  zizmor.yml
.githooks/: pre-commit
.github/workflows/: implementations.yml  run-benchmarks.yml  zizmor.yml
benchmark-files/: pandoc-manual.dj  tartan-wikipedia.dj
benchmarks/: pandoc-manual.sh
sh/: all-benchmarks.sh  benchmarks.sh  cpu-name.sh  install-djots.sh  install-linux.sh  install-lua-debian.sh  install-pandoc-debian.sh  install-php-debian.sh
src/: lib.rs  main.rs
